--- a/causesite/bootstrap-3.3.6-dist/index.html
+++ b/causesite/bootstrap-3.3.6-dist/index.html
@@ -43,13 +43,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="index.html">Save Pedestrians and Cyclists Lives</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="cause.html">Cause</a></li>
+            <li><a href="volanddon.html">Volunteer and Donate</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
